# graduation-thesis

./: .gitignore  .prettierignore  README.md
src/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  output.json  pyproject.toml  requirements.txt
src/backend/app/: app_factory.py  blueprint_main.py  blueprint_routes.py  celery_app.py  configuration_incident_main.py  configuration_incident_routes.py  conversation_main.py  conversation_routes.py  db.py  gateway_routes.py  identity_project_main.py  identity_project_routes.py  main.py  models.py  provisioning_main.py  provisioning_routes.py  scm_main.py  scm_routes.py  service_boundaries.py  workflow_main.py  workflow_routes.py
src/backend/app/core/: cache.py  config.py  logging.py  service_settings.py
src/backend/app/persistence/: __init__.py  runtime.py
src/backend/app/routers/: auth.py  auth_dependencies.py  github.py  github_dependencies.py  github_helpers.py  gitlab.py  http_errors.py  projects.py  state.py  telegram.py
src/backend/app/routers/projects_routes/: __init__.py  common.py  project_ansible.py  project_blueprints.py  project_crud.py  project_github.py  project_incidents.py  project_jobs.py  project_opentofu.py  project_state_backends.py  project_telegram.py  project_templates.py  project_workspace.py  streaming.py
src/backend/app/schemas/: chat.py  stream_events.py
src/backend/app/services/: clerk.py  cognito.py  crypto.py  generation_history.py
src/backend/app/services/agent/: __init__.py  service.py
src/backend/app/services/agent/config/: AGENTS.md
src/backend/app/services/agent/runtime/: __init__.py  context.py  (+7 more)
src/backend/app/services/ansible/: __init__.py  deploy.py
src/backend/app/services/auth/: identity.py  oauth.py  service.py  sessions.py  shared.py  tokens.py  types.py
src/backend/app/services/blueprint/: __init__.py  api.py  db.py  models.py  persistence.py
src/backend/app/services/blueprints/: __init__.py  ansible_generation.py  ansible_templates.py  catalog.py  service.py  terraform_generation.py  terraform_templates.py  types.py
src/backend/app/services/chat/: __init__.py  evidence_bundle.py  service.py  streaming_helpers.py  usage.py
src/backend/app/services/configuration_incident/: __init__.py  api.py  db.py  models.py  persistence.py
src/backend/app/services/conversation/: __init__.py  api.py  db.py  models.py  persistence.py
src/backend/app/services/github/: __init__.py  app.py  auth.py  auth_api.py  auth_common.py  auth_crypto.py  auth_oauth.py  auth_store.py  git.py  git_helpers.py  oauth.py  projects.py  repo_payloads.py
src/backend/app/services/identity_project/: __init__.py  api.py  db.py  models.py  persistence.py
src/backend/app/services/incident/: __init__.py  service.py
src/backend/app/services/jobs/: __init__.py  errors.py  redis_bus.py  service.py  tasks.py  test_service.py  types.py  validation.py
src/backend/app/services/model/: __init__.py  factory.py
src/backend/app/services/opentofu/: __init__.py  deploy.py
src/backend/app/services/policy/: __init__.py  checks.py
src/backend/app/services/project/: __init__.py  credentials.py  files.py
src/backend/app/services/project_execution/: __init__.py  contracts.py  policy.py
src/backend/app/services/provisioning/: api.py
src/backend/app/services/scm/: __init__.py  api.py  persistence.py
src/backend/app/services/state_backends/: __init__.py  cloud_adapters.py  credential_profiles.py  crypto.py  gitlab_auth.py  scanners.py  service.py  tasks.py
src/backend/app/services/telegram/: __init__.py  api.py  common.py  notifications.py  projects.py  test_notifications.py  test_projects.py
src/backend/app/services/workflow/: api.py  db.py  models.py  persistence.py  streaming.py
src/backend/app/shared/auth/: __init__.py  backend.py  dependencies.py  github.py
src/backend/app/shared/blueprint/: __init__.py  api.py  backend.py
src/backend/app/shared/contracts/: __init__.py  chat.py  project_execution.py
src/backend/app/shared/conversation/: __init__.py  models.py  persistence.py  runtime.py
src/backend/app/shared/http/: __init__.py  errors.py  sse.py
src/backend/app/shared/identity/: __init__.py  api.py  models.py  persistence.py
src/backend/app/shared/workflow/: __init__.py  api.py  backend.py  errors.py  streaming.py
src/backend/blueprints/default/: .gitignore  README.md  variables.tf
src/backend/scripts/: bootstrap_service_databases.py  build_service_image.sh  create_service_databases.py  render_apprunner_manifest.py  validate_no_shared_roots.py  validate_service_boundaries.py  validate_service_isolation.py
src/backend/services/: Dockerfile.service  README.md  services.json
src/backend/services/aws/: README.md
src/backend/services/blueprint/: pyproject.toml
src/backend/services/configuration-incident/: pyproject.toml
src/backend/services/conversation/: pyproject.toml
src/backend/services/gateway/: pyproject.toml
src/backend/services/identity-project/: pyproject.toml
src/backend/services/provisioning/: pyproject.toml
src/backend/services/scm/: pyproject.toml
src/backend/services/workflow/: pyproject.toml
src/backend/shared/: pyproject.toml
src/backend/tests/: test_additional_stream_endpoints.py  test_agent_config_loader.py  test_agent_iac_templates.py  test_agent_runtime_costs.py  test_ansible_runner.py  test_chat_schema.py  test_chat_service_usage_cleanup.py  test_chat_stream_inline.py  test_error_contract.py  test_gitlab_router_endpoints.py  test_iac_templates.py  test_opentofu_policy_gate.py  test_opentofu_status_cleanup.py  test_opentofu_stream_endpoint.py  test_project_credential_profiles.py  test_project_files.py  test_project_state_backends_router.py  test_state_backends_crypto.py  test_state_backends_gitlab_auth.py  test_state_backends_scanners.py  test_state_backends_service_helpers.py  test_state_router_endpoints.py  test_stream_http_endpoints.py  test_workspace_zip_import.py
(+540 files in other folders)
