[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepagents-api"
version = "0.1.0"
description = "FastAPI backend for LangChain Deep Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic-settings>=2.2.1",
  "clerk-backend-api>=3.2.0",
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "deepagents>=0.2.0",
  "anyio>=4.0.0",
  "httpx>=0.27.0",
  "GitPython>=3.1.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "psycopg[binary,pool]>=3.1",
  "sqlalchemy[asyncio]>=2.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
packages = [
  "app",
  "app.core",
  "app.routers",
  "app.routers.projects_routes",
  "app.schemas",
  "app.services",
  "app.services.agent",
  "app.services.agent.runtime",
  "app.services.chat",
  "app.services.github",
  "app.services.model",
  "app.services.opentofu",
  "app.services.opentofu.runtime",
  "app.services.policy",
  "app.services.project",
]
