[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepagents-api"
version = "0.1.0"
description = "FastAPI backend for LangChain Deep Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "sse-starlette>=2.1.3",
  "uvicorn[standard]==0.30.6",
  "pydantic-settings>=2.2.1",
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-mcp-adapters>=0.2.1",
  "deepagents>=0.2.0",
  "anyio>=4.0.0",
  "httpx>=0.27.0",
  "GitPython>=3.1.0",
  "PyGithub>=2.3.0",
  "python-gitlab>=4.9.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "psycopg[binary,pool]>=3.1",
  "sqlalchemy[asyncio]>=2.0",
  "python-multipart>=0.0.9",
  "celery==5.4.0",
  "flower>=2.0.1",
  "redis>=5.0.0",
  "ansible-runner>=2.4.0",
  "boto3==1.35.49",
  "google-cloud-storage>=2.18.0",
  "cryptography>=43.0.0",
  "checkov==3.2.508",
  "python-hcl2>=4.3.5",
]

[project.optional-dependencies]
dev = [
  "black>=25.1.0",
  "ruff>=0.12.0",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
  "build",
  ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.setuptools]
packages = [
  "app",
  "app.core",
  "app.routers",
  "app.routers.projects_routes",
  "app.schemas",
  "app.services",
  "app.services.agent",
  "app.services.agent.runtime",
  "app.services.chat",
  "app.services.blueprints",
  "app.services.ansible",
  "app.services.ansible.runtime",
  "app.services.github",
  "app.services.model",
  "app.services.opentofu",
  "app.services.opentofu.runtime",
  "app.services.policy",
  "app.services.project",
  "app.services.project_execution",
  "app.services.telegram",
  "app.services.jobs",
  "app.services.state_backends",
]
