[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepagents-backend-shared"
version = "0.1.0"
description = "Shared backend code for Deep Agents service packages"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "sse-starlette>=2.1.3",
  "uvicorn[standard]==0.30.6",
  "pydantic-settings>=2.2.1",
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-mcp-adapters>=0.2.1",
  "deepagents>=0.2.0",
  "anyio>=4.0.0",
  "httpx>=0.27.0",
  "GitPython>=3.1.0",
  "PyGithub>=2.3.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "psycopg[binary,pool]>=3.1",
  "sqlalchemy[asyncio]>=2.0",
  "python-multipart>=0.0.9",
  "celery==5.4.0",
  "flower>=2.0.1",
  "redis>=5.0.0",
  "ansible-runner>=2.4.0",
  "boto3==1.35.49",
  "cryptography>=43.0.0",
  "checkov==3.2.508",
]

[tool.setuptools]
package-dir = {"" = ".."}
packages = [
  "app",
  "app.core",
  "app.persistence",
  "app.routers",
  "app.routers.projects_routes",
  "app.schemas",
  "app.shared",
  "app.shared.auth",
  "app.shared.blueprint",
  "app.shared.conversation",
  "app.shared.contracts",
  "app.shared.http",
  "app.shared.identity",
  "app.shared.workflow",
  "app.services",
  "app.services.agent",
  "app.services.agent.runtime",
  "app.services.chat",
  "app.services.blueprint",
  "app.services.blueprints",
  "app.services.conversation",
  "app.services.ansible",
  "app.services.ansible.runtime",
  "app.services.configuration_incident",
  "app.services.github",
  "app.services.identity_project",
  "app.services.model",
  "app.services.opentofu",
  "app.services.opentofu.runtime",
  "app.services.policy",
  "app.services.provisioning",
  "app.services.project",
  "app.services.project_execution",
  "app.services.scm",
  "app.services.workflow",
  "app.services.jobs",
]
