[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepagents-gateway-service"
version = "0.1.0"
description = "Gateway service wrapper for Deep Agents"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = ["deepagents-backend-shared==0.1.0", "uvicorn[standard]==0.30.6"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["gateway_service"]
